clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr48814_2.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr48814-2.c" (c, x86_64-unknown-linux-gnu)
global arr : s32i[4] = ConstArray { ty: Array { element_type: Named("s32i"), size: 4 }, elts: Array([CirInt { ty: Named("s32i"), value: "1" }, CirInt { ty: Named("s32i"), value: "2" }, CirInt { ty: Named("s32i"), value: "3" }, CirInt { ty: Named("s32i"), value: "4" }]), trailing_zeros_num: 0 } [external, default, align 16, dso_local]
global count : s32i = CirInt { ty: Named("s32i"), value: "0" } [external, default, align 4, dso_local]

fn incr() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %26 = alloca s32i, "__retval", align 4
        %27 = get_global @count : s32i*
        %28 = load %27 : s32i, align 4
        inc
        store %29, %27, align 4
        store %29, %26
        %30 = load %26 : s32i
        return %30
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = call @incr() : s32i [all]
        %3 = get_global @count : s32i*
        %4 = load %3 : s32i, align 4
        inc
        store %5, %3, align 4
        %6 = cast(integral) %4 : s64i
        %7 = get_global @arr : s32i[4]*
        get_element
        store %2, %8, align 4
        scope {
                %11 = get_global @count : s32i*
                %12 = load %11 : s32i, align 4
                %13 = const 2 : s32i
                cmp
                %15 = ternary %14 ? { : bool
                        %25 = const true : bool
                        yield %25
                } : {
                        %17 = get_global @count : s32i*
                        %18 = load %17 : s32i, align 4
                        %19 = cast(integral) %18 : s64i
                        %20 = get_global @arr : s32i[4]*
                        get_element
                        %22 = load %21 : s32i, align 4
                        %23 = const 3 : s32i
                        cmp
                        yield %24
                }
                if %15 {
                        %16 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %9 = const 0 : s32i
        store %9, %0
        %10 = load %0 : s32i
        return %10
}
