clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr49123.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr49123.c" (c, x86_64-unknown-linux-gnu)
global v : s32i = CirInt { ty: Named("s32i"), value: "-1" } [internal, default, align 4, dso_local]
global s : rec_S = Zero { ty: Named("rec_S") } [internal, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = get_global @v : s32i*
        %3 = load %2 : s32i, align 4
        %4 = const 0 : s32i
        cmp
        %6 = cast(bool_to_int) %5 : s32i
        %7 = get_global @s : rec_S*
        get_member
        set_bitfield
        scope {
                %12 = get_global @s : rec_S*
                get_member
                get_bitfield
                %15 = cast(integral) %14 : u32i
                %16 = const 4294967295 : u32i
                cmp
                if %17 {
                        %18 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %10 = const 0 : s32i
        store %10, %0
        %11 = load %0 : s32i
        return %11
}
