clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr49419.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr49419.c" (c, x86_64-unknown-linux-gnu)
global __const.main.buf : rec_S[3] = ConstArray { ty: Array { element_type: Named("rec_S"), size: 3 }, elts: Array([ConstRecord { ty: Named("rec_S"), members: Array([CirInt { ty: Named("s32i"), value: "1" }, CirInt { ty: Named("s32i"), value: "1" }, CirInt { ty: Named("s32i"), value: "2" }]) }]), trailing_zeros_num: 1 } [cir_private, default, dso_local, constant]
global t : rec_S* = Dialect { dialect: "cir", mnemonic: "ptr", raw: Some("null"), ty: Some(Pointer { pointee: Named("rec_S"), addr_space: None }) } [external, default, align 8, dso_local]

fn abort() -> void [external, c, nothrow];
fn foo(%arg0: s32i, %arg1: s32i, %arg2: s32i*, %arg3: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i, %arg2: s32i*, %arg3: s32i):
        %31 = alloca s32i, "n", align 4
        %32 = alloca s32i, "f", align 4
        %33 = alloca s32i*, "s", align 8
        %34 = alloca s32i, "m", align 4
        %35 = alloca s32i, "__retval", align 4
        %36 = alloca s32i, "x", align 4
        %37 = alloca s32i, "i", align 4
        %38 = alloca s32i, "a", align 4
        store %arg0, %31
        store %arg1, %32
        store %arg2, %33
        store %arg3, %34
        scope {
                %101 = load %31 : s32i, align 4
                %102 = const -1 : s32i
                cmp
                if %103 {
                        %104 = const 0 : s32i
                        store %104, %35
                        %105 = load %35 : s32i
                        return %105
                }
                yield
        }
        scope {
                %76 = load %31 : s32i, align 4
                store %76, %36, align 4
                %77 = const 0 : s32i
                store %77, %37, align 4
                for cond {
                        %87 = load %36 : s32i, align 4
                        %88 = cast(integral) %87 : s64i
                        %89 = get_global @t : rec_S**
                        %90 = load %89 : rec_S*, align 8
                        ptr_stride
                        get_member
                        %93 = load %92 : s32i, align 4
                        %94 = load %32 : s32i, align 4
                        cmp
                        %96 = ternary %95 ? { : bool
                                %98 = load %37 : s32i, align 4
                                %99 = load %34 : s32i, align 4
                                cmp
                                yield %100
                        } : {
                                %97 = const false : bool
                                yield %97
                        }
                        condition %96
                } step {
                        %78 = load %37 : s32i, align 4
                        inc
                        store %79, %37, align 4
                        yield
                } body {
                        %80 = load %36 : s32i, align 4
                        %81 = cast(integral) %80 : s64i
                        %82 = get_global @t : rec_S**
                        %83 = load %82 : rec_S*, align 8
                        ptr_stride
                        get_member
                        %86 = load %85 : s32i, align 4
                        store %86, %36, align 4
                        yield
                }
                yield
        }
        scope {
                %72 = load %37 : s32i, align 4
                %73 = load %34 : s32i, align 4
                cmp
                if %74 {
                        %75 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %39 = load %37 : s32i, align 4
        %40 = const 1 : s32i
        %41 = add %39, %40 : s32i [nsw]
        store %41, %38, align 4
        scope {
                %48 = load %31 : s32i, align 4
                store %48, %36, align 4
                for cond {
                        %69 = load %37 : s32i, align 4
                        %70 = const 0 : s32i
                        cmp
                        condition %71
                } step {
                        %49 = load %37 : s32i, align 4
                        dec
                        store %50, %37, align 4
                        yield
                } body {
                        scope {
                                %51 = load %36 : s32i, align 4
                                %52 = cast(integral) %51 : s64i
                                %53 = get_global @t : rec_S**
                                %54 = load %53 : rec_S*, align 8
                                ptr_stride
                                get_member
                                %57 = load %56 : s32i, align 4
                                %58 = load %37 : s32i, align 4
                                %59 = cast(integral) %58 : s64i
                                %60 = load %33 : s32i*, align 8
                                ptr_stride
                                store %57, %61, align 4
                                %62 = load %36 : s32i, align 4
                                %63 = cast(integral) %62 : s64i
                                %64 = get_global @t : rec_S**
                                %65 = load %64 : rec_S*, align 8
                                ptr_stride
                                get_member
                                %68 = load %67 : s32i, align 4
                                store %68, %36, align 4
                                yield
                        }
                        yield
                }
                yield
        }
        %42 = load %36 : s32i, align 4
        %43 = const 0 : s64i
        %44 = load %33 : s32i*, align 8
        ptr_stride
        store %42, %45, align 4
        %46 = load %38 : s32i, align 4
        store %46, %35
        %47 = load %35 : s32i
        return %47
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i[3], "s", align 4
        %2 = alloca s32i, "i", align 4
        %3 = alloca rec_S[3], "buf", align 16
        %4 = const 0 : s32i
        store %4, %0
        %5 = get_global @__const.main.buf : rec_S[3]*
        copy
        %6 = cast(array_to_ptrdecay) %3 : rec_S*
        %7 = get_global @t : rec_S**
        store %6, %7, align 8
        scope {
                %23 = const 0 : s32i
                %24 = const 1 : s32i
                %25 = cast(array_to_ptrdecay) %1 : s32i*
                %26 = const 3 : s32i
                %27 = call @foo(%23, %24, %25, %26) : s32i [all]
                %28 = const 2 : s32i
                cmp
                if %29 {
                        %30 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %10 = const 0 : s64i
                get_element
                %12 = load %11 : s32i, align 4
                %13 = const 1 : s32i
                cmp
                %15 = ternary %14 ? { : bool
                        %22 = const true : bool
                        yield %22
                } : {
                        %17 = const 1 : s64i
                        get_element
                        %19 = load %18 : s32i, align 4
                        %20 = const 2 : s32i
                        cmp
                        yield %21
                }
                if %15 {
                        %16 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %8 = const 0 : s32i
        store %8, %0
        %9 = load %0 : s32i
        return %9
}
